--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
               uses: actions/checkout@v4
               
             - name: Maven test
-              uses: mvn test
+              run: mvn test
               
             - name: Checkstyle
-              uses: mvn checkstyle:checkstyle
+              run: mvn checkstyle:checkstyle
               
 
             # Setup java 11 to be default (sonar-scanner requirement as of 5.x)
@@ -53,4 +53,4 @@ jobs:
               env:
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
                 SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
-##       
+    
